# scr-axum-cranker-router

./: .gitignore  Cargo.toml  README.md  ci_verify.sh  generate_ci.sh
.github/workflows/: publish.yml
example/: simple_v1.rs
examples/: h3_server.rs  harder.rs  native_axum_tls.rs  router_server.rs  simple_v1.rs  tls_single_domain_server.rs  unified_router_server.rs
patches/: cranker-connector.patch  mu-cranker-router.patch
self_signed_certs/: openssl_command.sh
src/: axum_server_tls.rs  connect_info.rs  connector_connection.rs  connector_instance.rs  connector_service.rs  cranker_protocol.rs  cranker_protocol_request_builder.rs  cranker_protocol_response.rs  dark_host.rs  dark_mode_manager.rs  exceptions.rs  http3_quinn.rs  http_utils.rs  ip_validator.rs  lib.rs  proxy_info.rs  proxy_listener.rs  route_identify.rs  route_resolver.rs  router_info.rs  router_socket.rs  router_socket_filter.rs  router_socket_v1.rs  router_socket_v3.rs  time_utils.rs  websocket_farm.rs  websocket_listener.rs
