[package]
name = "scr-axum-cranker-router"
version = "0.0.2"
edition = "2021"
rust-version = "1.78.0"
description = "A Rust port of mu-cranker-router"
homepage = "https://github.com/gyakkun/scr-axum-cranker-router"
repository = "https://github.com/gyakkun/scr-axum-cranker-router"
keywords = ["cranker", "reverse-proxy", "http", "websocket", "router"]
categories = ["network-programming"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2"
axum = { version = "0.7", features = ["default", "ws", "original-uri", "http2"] }
axum-core = "0.4"
bytes = "1"
dashmap = "5"
futures = "0.3"
hashlink = "0.9.1"
lazy_static = "1"
local-ip-address = "0.5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util", "filter"] }
tower-http = { version = "0.5", features = ["limit"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum-macros = { version = "0.4" }
# for tls example - single domain
axum-server = { version = "0.6", features = ["rustls", "rustls-pemfile", "tls-rustls", "tokio-rustls"] }
rustls-pemfile = { version = "2" }
simple_logger = "5"

[lib]
crate-type = ["lib"]

[[example]]
name = "simple_v1"
crate-type = ["bin"]

[[example]]
name = "harder"
crate-type = ["bin"]

[[example]]
name = "tls_single_domain_server"
crate-type = ["bin"]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true