[package]
name = "scr-axum-cranker-router"
version = "0.0.9"
edition = "2021"
rust-version = "1.85"
description = "A Rust port of mu-cranker-router"
homepage = "https://github.com/gyakkun/scr-axum-cranker-router"
repository = "https://github.com/gyakkun/scr-axum-cranker-router"
keywords = ["cranker", "reverse-proxy", "http", "websocket", "router"]
categories = ["network-programming"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2"
axum = { version = "0.8", features = ["default", "ws", "original-uri", "http2"] }
axum-core = "0.5"
bytes = "1"
dashmap = "6"
futures = "0.3"
hashlink = "0.10"
lazy_static = "1"
local-ip-address = "0.6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["limit"] }
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
async-trait = "0.1"

[dev-dependencies]
# for tls example - single domain
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
# As CryptoProvider
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
simple_logger = "5"
axum-extra = "0.10"

[lib]
crate-type = ["lib"]

[[example]]
name = "simple_v1"
crate-type = ["bin"]

[[example]]
name = "harder"
crate-type = ["bin"]

[[example]]
name = "tls_single_domain_server"
crate-type = ["bin"]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
